Fix game board width on mobile

--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -18,6 +18,7 @@
   margin-bottom: 10px;
 
   .game-board {
+    max-width: 100%;
     flex-grow: 4;
     margin: 0 15px;
   }
